--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 
 <body>
 
-  <p style="font-family:'Courier New'">👋 I'm Michael Wei, broadly itnterested in computer science, math, and operations
-    research. I'm currently a sophomore at Cornell University, studying computer science. I can be reached at mw756 [at]
-    cornell [dot] edu.</p>
+  <center>
+    <p style="font-family:'Courier New'">👋 Hello.</p>
+
+    <img src="images/cornell-sunset-1.jpg" alt="Cornell Sunset" width="25%" height="25%">
+  </center>
 
 </body>
 
