--- a/index.html
+++ b/index.html
@@ -1,13 +1,47 @@
 <!DOCTYPE html>
 <html>
 
+<head>
+  <link rel="stylesheet" type="text/css" href="main.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+<style>
+  footer {
+    display: block;
+  }
+
+  a:link {
+    color: black;
+    text-decoration: none;
+  }
+
+  a:visited {
+    color: black;
+    text-decoration: none;
+  }
+
+  a:hover {
+    background: #f8fc03;
+  }
+
+  body {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: large;
+  }
+</style>
+
 <body>
 
-  <center>
-    <p style="font-family:'Courier New'">👋 Hello.</p>
+  <p>👋 Hello.</p>
 
-    <img src="images/cornell-sunset-1.jpg" alt="Cornell Sunset" width="25%" height="25%">
-  </center>
+  <img src="images/cornell-sunset-1.jpg" alt="Cornell Sunset" width="25%" height="25%">
+  <footer>
+    <p>2022 © Michael Wei<br>
+      <a class="footer-github" href="https://github.com/mwei4"><i class="fa">&#xf09b;</i>&thinsp;Github</a>
+      <a class="footer-linkedin" href="https://www.linkedin.com/in/michael-w-3aa852208/"><i
+          class="fa">&#xf08c;</i>&thinsp;Linkedin</a>
+    </p>
+  </footer>
 
 </body>
 
