--- a/index.html
+++ b/index.html
@@ -5,36 +5,15 @@
   <link rel="stylesheet" type="text/css" href="main.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<style>
-  footer {
-    display: block;
-  }
-
-  a:link {
-    color: black;
-    text-decoration: none;
-  }
-
-  a:visited {
-    color: black;
-    text-decoration: none;
-  }
-
-  a:hover {
-    background: #f8fc03;
-  }
-
-  body {
-    font-family: 'Courier New', Courier, monospace;
-    font-size: large;
-  }
-</style>
 
 <body>
+  <p class="about-me">
+    👋 I'm Michael Wei, broadly interested in computer science, math, and operations
+    research. I'm currently a sophomore at Cornell University, studying computer science.</p>
+  <br><img src="images/cornell-sunset-1.jpg" alt="Cornell Sunset" width="25%" height="25%">
+  <figcaption>Cornell Sunset</figcaption>
 
-  <p>👋 Hello.</p>
 
-  <img src="images/cornell-sunset-1.jpg" alt="Cornell Sunset" width="25%" height="25%">
   <footer>
     <p>2022 © Michael Wei<br>
       <a class="footer-github" href="https://github.com/mwei4"><i class="fa">&#xf09b;</i>&thinsp;Github</a>
