--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+  <title>Michael Wei</title>
+  <link rel="icon" type="image/png" href="images/favicon.png" />
   <link rel="stylesheet" type="text/css" href="main.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
