--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
   </script>
 
   <br><img src="images/cornell-sunset-1.jpg" alt="Cornell Sunset, credit Howard Hua" width="25%" height="25%">
-  <figcaption>Cornell Sunset</figcaption>
+  <figcaption>Cornell Sunset, credit <mark><a class="howard"
+        href="https://www.linkedin.com/in/howard-hua-8b8316202/">Howard
+        Hua</a></mark>
+  </figcaption>
 
 
   <footer>
