--- a/index.html
+++ b/index.html
@@ -11,23 +11,10 @@
 <body onload="typeWriter();">
   <p class="about-me" id="about-me"></p>
 
-  <script>
-    var i = 0;
-    var txt = '👋 I\'m Michael Wei, broadly interested in computer science, math, and operations research. I\'m currently a sophomore at Cornell University, studying computer science.';
-    var speed = 40;
-
-    function typeWriter() {
-      if (i < txt.length) {
-        document.getElementById("about-me").innerHTML += txt.charAt(i);
-        i++;
-        setTimeout(typeWriter, speed);
-      }
-    }
-  </script>
+  <script src="myscript.js"></script>
 
   <br><img src="images/cornell-sunset-1.jpg" alt="Cornell Sunset, credit Howard Hua" width="25%" height="25%">
-  <figcaption>Cornell Sunset, credit <mark><a class="howard"
-        href="https://www.linkedin.com/in/howard-hua-8b8316202/">Howard
+  <figcaption>Cornell Sunset, 📷 <mark><a class="howard" href="https://www.linkedin.com/in/howard-hua-8b8316202/">Howard
         Hua</a></mark>
   </figcaption>
 
