--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <script src="myscript.js"></script>
 
-  <br><img src="images/cornell-sunset-1.jpg" alt="Cornell Sunset, credit Howard Hua" width="25%" height="25%">
+  <br><img id="zoom" src="images/cornell-sunset-1.jpg" alt="Cornell Sunset, credit Howard Hua">
   <figcaption>Cornell Sunset, 📷 <mark><a class="howard" href="https://www.linkedin.com/in/howard-hua-8b8316202/">Howard
         Hua</a></mark>
   </figcaption>
