--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body onload="waitWrite();">
+  <div id="particles-js"></div>
 
   <div id="fade-1">
     <p class="about-me" id="about-me"></p>
@@ -36,11 +37,15 @@
   </div>
 
   <script type="text/javascript">
+    $('#particles-js').fadeIn(0);
     $('#fade-1').fadeIn(0);
     $('#fade-2').delay(7000).fadeIn(1000);
     $('#fade-3').delay(8500).fadeIn(1000);
     $('#fade-4').delay(10000).fadeIn(1000);
   </script>
+
+  <script src="js/particles.js"></script>
+  <script src="js/app.js"></script>
 </body>
 
 </html>
